# multi-animal-tracker

./: .flake8  .flake8.moderate  .flake8.strict  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLASSKIT.MD  CLAUDE.md  CONTRIBUTING.md  ENVIRONMENTS.md  GEMINI.md  LICENSE  METALFAISS_SETUP.md  POSE_INFERENCE_PLAN.md  POSE_INTEGRATION_PLAN.md  QUALITY_STATUS.md  README.md  ROCM_SETUP.md  YOLO26_UPDATE.md  YOLO_GUI_INTEGRATION.md  YOLO_INTEGRATION_SUMMARY.md  YOLO_QUICK_REFERENCE.md  check_db_paths.py  coverage.json  environment-cuda.yml  environment-gpu.yml  environment-minimal.yml  environment-mps.yml  environment-rocm.yml  environment.yml  index.html  makefile  mambafaf2cqxaap0  mkdocs.yml  pyproject.toml  pytest.ini  requirements-cuda.txt  requirements-cuda12.txt  requirements-cuda13.txt  requirements-dev.txt  (+15 more)
.github/: CODE_QUALITY_GUIDE.md  PRE_COMMIT_GUIDE.md  copilot-instructions.md
.github/workflows/: docs-pages.yml  postproc-equivalence.yml  tracking-suite.yml
.legacy/: hungarian.bak.py
.serena/: project.yml
brand/: banner.ai  multianimaltracker.ai
branding/: classkit.ai  datasieve.ai  multianimaltracker.ai  multianimaltrackerafterhours.ai  posekit.ai
branding/Illustrator Files/: banner.ai  classkit.ai  detectkit.ai  filterkit.ai  hydra.ai  posekit.ai  refinekit.ai  trackerkit.ai
configs/: README.md  default.json  obiroi.json  ooceraea_biroi.json
configs/skeletons/: ooceraea_biroi.json
docs/: confidence_tracking.md  configuration_parameters.md  gpu_utils_developer_guide.md  hooks.py  index.md  individual_analysis_guide.md  nan_prevention_guide.md  new_features.md  yolo_detection_guide.md  yolo_gui_guide.md
docs/archive/legacy-flat/: confidence_tracking.md  configuration_parameters.md  gpu_utils_developer_guide.md  individual_analysis_guide.md  module-map.md  (+3 more)
docs/developer-guide/: architecture.md  code-health.md  confidence-metrics.md  contributing.md  data-flow.md  dependency-cuda-updates.md  extending-detection.md  extending-identity.md  gpu-backends.md  module-map.md  performance-tuning.md  publishing.md  runtime-integration.md  tracking-algorithm-deep-dive.md  tracking-optimization.md
docs/getting-started/: environments.md  installation.md  integrations.md  platforms.md  quickstart-hydra.md  quickstart-mat.md  quickstart-posekit.md  rocm.md
docs/plans/: 2026-03-06-classkit-production-design.md  2026-03-06-classkit-production-plan.md  2026-03-07-false-merge-reduction-plan.md  2026-03-08-multi-animal-pose-contamination.md  2026-03-08-pose-aware-optimizer.md  2026-03-08-pose-output-quality-plan.md  2026-03-09-mat-afterhours-design.md  2026-03-09-mat-afterhours-plan.md  2026-03-11-em-imm-motion-model-plan.md  2026-03-11-fragment-merge-proofreading-plan.md  2026-03-12-publication-strategy.md  2026-03-26-true-canonicalization-plan.md  2026-03-30-src-reorganization-design.md  2026-03-31-src-reorganization-plan.md
docs/reference/: api-app.md  api-core.md  api-data.md  api-gui.md  api-index.md  api-posekit.md  api-utils.md  api-widgets.md  changelog.md  cli-reference.md  faq.md  technical-reference.md  ui-components-hydra.md  ui-components-mat.md  ui-components-posekit.md
docs/technical-reference/: Makefile  README.md  main.aux  main.fdb_latexmk  main.out  main.toc
docs/user-guide/: classkit.md  compute-runtimes.md  configuration-reference.md  dataset-generation.md  detection-modes.md  detectkit.md  filterkit.md  individual-analysis.md  outputs-and-csv-schema.md  overview.md  posekit-labeler.md  posekit.md  post-processing.md  refinekit.md  tracking-and-merging.md  troubleshooting.md  workflow.md
examples/: individual_analysis_example.py  yolo_detection_example.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/search/: search_index.json
latest/technical-reference/: index.html  main.aux  main.tex
legacy/core/: README.md  assignment.py  assignment_optimization_attempt.py  assignment_original.py  kalman_filters.py
legacy/posekit_old/: __init__.py  pose_label.py  pose_label_extensions.py
models/: model_registry.json
models/YOLO-obb/: model_registry.json
nightly/: 404.html  doc-quality-baseline.json  index.html  objects.inv  sitemap.xml
nightly/search/: search_index.json
nightly/technical-reference/: index.html  main.tex
notebooks/: post_processing_only.ipynb
src/brand/: logos
src/hydra_suite/: __init__.py  advanced_config.json  paths.py  paths_migrate.py
src/multi_tracker/: __init__.py  advanced_config.json  main.py  paths.py  paths_migrate.py
technical-reference/: README.md  main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc
technical-reference/figures/: ecosystem.tex  lifecycle.tex  pipeline.tex
tests/: __init__.py  conftest.py  test_background_model.py  test_background_model_integration.py  test_base_dialog.py  test_base_worker.py  test_batch_optimizer.py  test_bg_parameter_helper.py  test_cache_ids.py  test_canonical_crop.py  test_canonicalization.py  test_canonicalization_flexible.py  test_classkit_app.py  test_classkit_apriltag_autolabel.py  test_classkit_cache_lineage.py  test_classkit_class_editor.py  test_classkit_db_model_cache.py  test_classkit_embedder.py  test_classkit_embedding_worker.py  test_classkit_explorer.py  test_classkit_export_worker.py  test_classkit_extended_training.py  test_classkit_image_viewer.py  test_classkit_inference_workers.py  test_classkit_machine_labeling.py  test_classkit_main_window.py  test_classkit_new_project.py  test_classkit_project.py  test_classkit_publish.py  test_classkit_scheme.py  test_classkit_shortcut_editor.py  test_classkit_source_dialogs.py  test_classkit_source_import.py  test_classkit_stepper.py  test_classkit_synthetic_generalization.py  test_classkit_tiny_train.py  test_classkit_training_dialog.py  test_classkit_training_progress.py  test_compute_runtime.py  test_confidence_density.py  (+99 more)
tests/helpers/: __init__.py  module_loader.py  postproc_runner.py
tools/: annotate_qt_signatures.py  benchmark_models.py  benchmark_sleap_runtime.py  benchmark_sleap_service.py  doc_quality_check.py  sleap_direct_native_probe.py
training/: README.md
(+787 files in other folders)
